--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
   "name": "dotgit",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A simple git repository utility for getting branch information.",
+  "main": "bld/index.js",
+  "typings": "bld/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vilic/dotgit.git"
+  },
+  "keywords": ["git"],
   "author": "vilicvane",
   "license": "MIT",
-  "main": "bld/index.js",
-  "typings": "bld/index.d.ts"
+  "bugs": {
+    "url": "https://github.com/vilic/dotgit/issues"
+  },
+  "homepage": "https://github.com/vilic/dotgit#readme"
 }
