--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "noImplicitAny": true,
         "noImplicitReturns": true,
         "sourceMap": true,
+        "declaration": true,
         "rootDir": "src",
         "outDir": "bld"
     },
